# study-rag-tutor

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
backend/: .coverage  .dockerignore  Dockerfile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
backend/app/: __init__.py  db.py  deps.py  main.py  routes.py  schemas.py  services.py
backend/rag/: __init__.py  answer.py  chunking.py  config.py  embeddings.py  pdf.py  quiz.py  store.py
backend/seed/: seed_demo.py
backend/seed/data/: SOURCE.md
backend/tests/: conftest.py  test_answer.py  test_ask.py  test_chunking.py  test_config.py  test_courses.py  test_db.py  test_embeddings.py  test_health.py  test_pdf.py  test_quiz.py  test_smoke.py  test_store.py  test_upload.py
docs/: ARCHITECTURE.md  DEPLOY.md  JOURNAL.md  ROADMAP.md  TECHNICAL_REPORT.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/scripts/: screenshots.mjs
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  router.tsx  shell.test.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: app-layout.tsx  file-dropzone.tsx  health-badge.test.tsx  health-badge.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/routes/: ask-page.test.tsx  ask-page.tsx  course-home.tsx  join-page.test.tsx  join-page.tsx  progress-page.test.tsx  progress-page.tsx  quiz-page.test.tsx  quiz-page.tsx  upload-page.test.tsx  (+1 more)
(+7 files in other folders)
